first commit: script model_v1

--- a/classificacao_feijoes.ipynb
+++ b/classificacao_feijoes.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Classificação de Imagens de Grãos de Feijão 🫘\n",
-    "#### O classificador tem as seguientes etapas\n",
+    "#### O classificador tem as seguientes etapas:\n",
     "1ª Primeiro: realizamos o treinamento do modelo convolucional utilizando o TensorFlow, com o objetivo de distinguir entre feijões de qualidade normal (1) e estragados (0).\n",
     "\n",
     "\n",
